@@ -10,6 +10,7 @@ Sep 11 2002  2.5.2  Added soundopts config file option per Mathias' suggestion
                      still useable for future runs throug kismet.  Thanks to
                      poptix for the suggestion.
                     Updated configure to require imagick 5.4.7 or newer
+                    Added exception catching for color allocation to gpsmap
 Sep 10 2002  2.5.2  Added more imagemagick exception catching/handling 
                      to gpsmap
                     Fixed silly typo for default image size in gpsmap
